# bluez-dubbing

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
apps/backend/libs/common-schemas/: pyproject.toml
apps/backend/libs/common-schemas/common_schemas/: models.py  service_utils.py  utils.py
apps/backend/libs/common-schemas/config/: chatterbox.yaml  control_center.yaml  deep_translator.yaml  edge_tts.yaml  facebook_m2m100.yaml  whisperx.yaml
apps/backend/services/asr/: cli.py  cli_0.py  cli_1.py  pyproject.toml
apps/backend/services/asr/app/: main.py  registry.py  runner_api.py
apps/backend/services/asr/models/whisperxModel/: pyproject.toml  runner_0.py  runner_1.py
apps/backend/services/asr/tests/: __init__.py  test_cli.py  test_cli_0.py  test_cli_1.py  test_runner_api.py
apps/backend/services/orchestrator/: pyproject.toml
apps/backend/services/orchestrator/app/: main.py
apps/backend/services/orchestrator/media_processing/: audio_processing.py  final_pass.py
apps/backend/services/orchestrator/tests/: test_pipeline_integration.py
apps/backend/services/translation/: cli.py  pyproject.toml
apps/backend/services/translation/app/: main.py  registry.py  runner_api.py
apps/backend/services/translation/models/deepTranslationModel/: pyproject.toml  runner.py
apps/backend/services/translation/models/facebook_m2m100Model/: pyproject.toml  runner.py
apps/backend/services/translation/tests/: test_cli.py  test_runner_api.py
apps/backend/services/tts/: pyproject.toml
apps/backend/services/tts/app/: registry.py  runner_api.py
apps/backend/services/tts/models/chatterboxModel/: pyproject.toml  runner.py
apps/backend/services/tts/models/edgeTTsModel/: runner.py
apps/backend/services/tts/tests/: test_cli.py  test_runner_api.py
apps/frontend/: index.html
apps/frontend/assets/: logo.html
apps/frontend/public/: index.html
apps/frontend/scripts/: app.js
apps/frontend/scripts/modules/: api.js  dom.js  handlers.js  language.js  models.js  results.js  reviews.js  state.js  targetLangs.js  theme.js  token.js  ui.js  utils.js
apps/frontend/styles/: main.css
libs/common-schemas/: pyproject.toml
libs/common-schemas/common_schemas/: models.py  utils.py
libs/common-schemas/config/: control_center.yaml  edge_tts.yaml  whisperx.yaml
services/asr/: pyproject.toml
services/asr/app/: main.py  registry.py  runner_api.py
services/asr/models/whisperxModel/: pyproject.toml  runner.py  runner_0.py  runner_1.py
services/asr/tests/: test_runner_api.py
services/orchestrator/: pyproject.toml
services/orchestrator/app/: main.py
services/orchestrator/app/templates/: ui.html
services/orchestrator/media_processing/: audio_processing.py  final_pass.py  subtitles_handling.py
services/orchestrator/preprocessing/: media_separation.py
services/orchestrator/tests/: __init__.py  test_pipeline_integration.py
services/translation/: pyproject.toml
services/translation/app/: main.py  registry.py  runner_api.py
services/translation/models/deepTranslationModel/: pyproject.toml  runner.py
services/translation/models/facebook_m2m100Model/: runner.py
services/translation/tests/: test_runner_api.py
services/tts/: cli.py
services/tts/app/: main.py  registry.py  runner_api.py
services/tts/models/chatterboxModel/: pyproject.toml  runner.py
services/tts/models/edgeTTsModel/: pyproject.toml  runner.py
services/tts/tests/: test_runner_api.py
