[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "common-schemas",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "uvicorn>=0.37.0",
]

[tool.uv.sources]
common-schemas = { path = "../../libs/common-schemas", editable = true }

