[project]
name = "orchestrator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "audio-separator>=0.39.0",
    "common-schemas",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "onnxruntime>=1.23.0",
    "pyrubberband>=0.4.0",
    "python-multipart>=0.0.20",
    "scipy>=1.16.2",
    "soundfile>=0.13.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "yt-dlp>=2024.7",
    "uvicorn>=0.37.0",
]

[tool.uv.sources]
common-schemas = { path = "../../libs/common-schemas", editable = true }
