[project]
name = "translation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

    "fastapi>=0.118.0",
    "pydantic>=2.11.10",
    "uvicorn>=0.37.0",
    "common-schemas"

]

[tool.uv.sources]
common-schemas = { path = "../../libs/common-schemas", editable = true }
