[project]
name = "edgettsmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.3",
    "common-schemas"
]

[tool.uv.sources]
common-schemas = { path = "../../../../libs/common-schemas" , editable = true}