[project]
name = "deeptranslationmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "common-schemas"
]

[tool.uv.sources]
common-schemas = { path = "../../../../libs/common-schemas" , editable = true}